--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^3.15.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
